crates/app/src/commands/init/snapshots/moon_app__commands__init__node__tests__renders_minimal.snap
---
source: crates/app/src/commands/init/node.rs
expression: render_template(context).unwrap()
---
node:
  version: '16.0.0'
  packageManager: 'npm'
  npm:
    version: '8.0.0'
