crates/app/src/commands/init/snapshots/moon_app__commands__init__node__tests__renders_nodenv.snap
---
source: crates/app/src/commands/init/node.rs
expression: render_template(context).unwrap()
---
# Configures Node.js within the toolchain.
node:
  # The version to use. Must be a semantic version that includes major, minor, and patch.
  # We suggest using the latest active LTS version: https://nodejs.org/en/about/releases
  version: '16.0.0'

  # The package manager to use when managing dependencies.
  # Accepts "npm" (default), "pnpm", "yarn", or "bun".
  packageManager: 'npm'

  # The version of the package manager (above) to use.
  npm:
    version: '8.0.0'

  # Add `node.version` as a constraint in the root `package.json` `engines`.
  addEnginesConstraint: true

  # Dedupe dependencies after the lockfile has changed.
  dedupeOnLockfileChange: false

  # Version format to use when syncing dependencies within the project's `package.json`.
  # dependencyVersionFormat: 'workspace'

  # Infer and automatically create moon tasks from `package.json` scripts, per project.
  # BEWARE: Tasks and scripts are not 1:1 in functionality, so please refer to the documentation.
  inferTasksFromScripts: false

  # Support the "one version policy" by only declaring dependencies in the root `package.json`.
  # rootPackageOnly: true

  # Sync a project's relationships as `dependencies` within the project's `package.json`.
  syncProjectWorkspaceDependencies: true

  # Sync `node.version` to a 3rd-party version manager's config file.
  # Accepts "nodenv" (.node-version), "nvm" (.nvmrc), or none.
  syncVersionManagerConfig: 'nodenv'
